--- a/core/templates/funcionamiento.html
+++ b/core/templates/funcionamiento.html
@@ -4,7 +4,7 @@
 {% load core_extras %} 
 {% block main_content %}
     <div class="col-md-12 text-centered">
-        <div class="pull-left">
+        <div class="pull-left col-md-7">
         	{% descargar_excel "gf-all" %}
             <h2 class="title">Gastos de funcionamiento {{ municipio }} {{ year }} </h2>
         </div>
@@ -303,7 +303,7 @@
         <td class="text-right">{{ row.actualizado }}</td>
         <td class="text-right">{% if row.actualizado %} {{ row.actualizado|sub:row.actualizado }}{% else %}0 {% endif %}</td>
         <td class="text-right">{{ row.ejecutado }}</td>
-        {% if row.actualizado %}
+        {% if row.asignado %}
         <td class="text-right">{{ row.ejecutado|div:row.asignado|mul:100|floatformat:1 }}%</td>
         {% endif %}
     </tr>
