--- a/core/templates/oim_chart.html
+++ b/core/templates/oim_chart.html
@@ -409,22 +409,23 @@
       </div>
       <div role="tabpanel" class="tab-pane fade" id="oimorigen" aria-labelledby="oimorigen-tab">
         <!--maribel 20/07 oim-tabla 7 -->
-        <div class="col-md-6">
+        <div class="col-md-7">
         	{% descargar_excel "oim6" %}
             <h3>Ejecución presupuestaria del ingreso sector municipal</h3>
-            <h4 class="text-info">Millones de córdobas corrientes</h4>
-            <a class="btn btn-success" role="button" data-toggle="collapse" href="#collapsehistorico"  aria-expanded="false" aria-controls="collapsehistorico">ver gráfico</a>
+            <h4 class="text-info">Millones de córdobas corrientes
+                <a class="btn btn-success" role="button" data-toggle="collapse" href="#collapsehistorico"  aria-expanded="false" aria-controls="collapsehistorico">ver gráfico</a>  
+            </h4>
 
-         <div class="collapse" id="collapsehistorico">
-            <div class="well">
-                {% if not municipio %}
-                    <div id='comparativo2' class="col-md-8"> Chart will be rendered here </div>
-                {% else %}
-                    <div id='comparativo_anios' class="col-md-8"> Chart will be rendered here </div>
-                {% endif %}
+            <div class="collapse" id="collapsehistorico">
+                <div class="well">
+                    {% if not municipio %}
+                        <div id='comparativo2' class="col-md-8"> Chart will be rendered here </div>
+                    {% else %}
+                        <div id='comparativo_anios' class="col-md-8"> Chart will be rendered here </div>
+                    {% endif %}
+                </div>
             </div>
-        </div>
-        <table class="table table-condensed">
+            <div class="col-md-6">
             <table class="table table-condensed">
                 <tr class="info"><th>Años</th> <th>Inicial</th> <th>Ejecutado</th> <th><a href="#" data-toggle="tooltip" data-original-title="Ejecutado/Actualizado" class="link-info">%</a></th></tr>
                 {% for row in anuales %}
@@ -439,14 +440,14 @@
                 {% endfor %}
                 <tr class="success bold">
                     <td>TOTAL</td>
-                    <td>{{ anuales|total_sum:'asignado'|intcomma }}</td>
-                    <td>{{ anuales|total_sum:'ejecutado'|intcomma }}</td>
+                    <td class="text-right">{{ anuales|total_sum:'asignado'|million|intcomma }}</td>
+                    <td class="text-right">{{ anuales|total_sum:'ejecutado'|million|intcomma }}</td>
                     {% with total_sum_asignado=anuales|total_sum:'asignado' %}</td>
                     <td class="montos">{{ anuales|total_sum:'ejecutado'|div:total_sum_asignado|mul:100|floatformat:1 }}%</td>
                     {% endwith %}
                 </tr>
             </table>
-        </div>
+            </div>
         <!-- /fin oimtabla7 -->
         <br clear="all" >
         	{% descargar_excel "oim7" %}
@@ -463,7 +464,7 @@
              <tr>
                <td class="text-left">{{ key }}</td>
                {% for year in year_list %}
-                 <td class="text-right">{{ data|keyvalue:year|intcomma }}</td>
+               <td class="text-right">{{ data|keyvalue:year|million|intcomma }}</td>
                {% endfor %}
                <!-- old-fashioned way:
                {% for subkey, subdata in data.items %}
